k8s/apps/middleman/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: middleman
  name: middleman-staking-dev
spec:
  rules:
    - host: staking-dev.pocket.network
      http:
        paths:
          - backend:
              service:
                name: middleman
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - staking-dev.pocket.network
      secretName: staking-pocket-tls
